feat: enhance offline tile management; improve error handling in TileCacheManager and TileInterceptor; refactor download logic in TileDownloadManager; update permissions in android-build.yml