@@ -5,7 +5,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
@@ -66,17 +66,59 @@ public class TileDownloadManager {
     TERRAIN
   }
 
+  /** Groups download parameters into a single object. */
+  public static class DownloadRequest {
+    public final String regionId;
+    public final double[] bbox;
+    public final int minZoom;
+    public final int maxZoom;
+    public final List<TileLayer> layers;
+    public final String styleName;
+    public final String token;
+
+    public DownloadRequest(
+        String regionId,
+        double[] bbox,
+        int minZoom,
+        int maxZoom,
+        List<TileLayer> layers,
+        String styleName,
+        String token) {
+      this.regionId = regionId;
+      this.bbox = bbox;
+      this.minZoom = minZoom;
+      this.maxZoom = maxZoom;
+      this.layers = layers;
+      this.styleName = styleName;
+      this.token = token;
+    }
+  }
+
   /**
    * Download tiles for a region defined by a bounding box and zoom range.
    *
-   * @param regionId Unique identifier for this download region
-   * @param bbox Bounding box [west, south, east, north] in degrees
-   * @param minZoom Minimum zoom level (inclusive)
-   * @param maxZoom Maximum zoom level (inclusive)
-   * @param layers Which tile layers to download
-   * @param styleName Mapbox style name (e.g., "dark-v11") for style/sprite resources
-   * @param token Mapbox access token
+   * @param request Download parameters
    * @param listener Progress callback listener
+   */
+  public void downloadRegion(DownloadRequest request, DownloadListener listener) {
+    if (request.bbox == null || request.bbox.length != 4) {
+      if (listener != null) {
+        listener.onError(
+            request.regionId, "Invalid bounding box: must be [west, south, east, north]");
+      }
+      return;
+    }
+
+    List<String> urls = buildAllUrls(request);
+    int totalTiles = urls.size();
+
+    Log.d(TAG, "Starting download for region " + request.regionId + ": " + totalTiles + " resources, zoom " + request.minZoom + "-" + request.maxZoom);
+
+    submitDownloadTasks(request.regionId, urls, totalTiles, listener);
+  }
+
+  /**
+   * Download tiles for a region (convenience overload with individual parameters).
    */
   public void downloadRegion(
       String regionId,
@@ -87,131 +129,8 @@ public class TileDownloadManager {
       String styleName,
       String token,
       DownloadListener listener) {
-    if (bbox == null || bbox.length != 4) {
-      if (listener != null) {
-        listener.onError(regionId, "Invalid bounding box: must be [west, south, east, north]");
-      }
-      return;
-    }
-
-    double west = bbox[0], south = bbox[1], east = bbox[2], north = bbox[3];
-
-    // Calculate all tile coordinates
-    List<TileCoord> tileCoords = new ArrayList<>();
-    for (int z = minZoom; z <= maxZoom; z++) {
-      int minX = lonToTileX(west, z);
-      int maxX = lonToTileX(east, z);
-      int minY = latToTileY(north, z); // Note: north has lower Y value
-      int maxY = latToTileY(south, z);
-
-      for (int x = minX; x <= maxX; x++) {
-        for (int y = minY; y <= maxY; y++) {
-          tileCoords.add(new TileCoord(z, x, y));
-        }
-      }
-    }
-
-    // Build the full URL list including all requested layers
-    List<String> urls = new ArrayList<>();
-    for (TileCoord coord : tileCoords) {
-      for (TileLayer layer : layers) {
-        switch (layer) {
-          case VECTOR:
-            urls.add(String.format(VECTOR_TEMPLATE, coord.z, coord.x, coord.y, token));
-            break;
-          case SATELLITE:
-            urls.add(String.format(SATELLITE_TEMPLATE, coord.z, coord.x, coord.y, token));
-            break;
-          case TERRAIN:
-            urls.add(String.format(TERRAIN_TEMPLATE, coord.z, coord.x, coord.y, token));
-            break;
-        }
-      }
-    }
-
-    // Add style, sprite, and common glyph resources
-    if (styleName != null && !styleName.isEmpty()) {
-      urls.add(String.format(STYLE_TEMPLATE, styleName, token));
-      urls.add(String.format(SPRITE_JSON_TEMPLATE, styleName, token));
-      urls.add(String.format(SPRITE_PNG_TEMPLATE, styleName, token));
-
-      // Common glyph ranges for typical Latin + Arabic text
-      String[] fontStacks = {
-        "DIN Pro Regular,Arial Unicode MS Regular",
-        "DIN Pro Medium,Arial Unicode MS Regular",
-        "DIN Pro Bold,Arial Unicode MS Bold"
-      };
-      String[] glyphRanges = {
-        "0-255",
-        "256-511",
-        "512-767",
-        "768-1023",
-        "8192-8447",
-        "8448-8703", // Arabic ranges
-        "65024-65279" // Variation selectors
-      };
-      for (String fontStack : fontStacks) {
-        for (String range : glyphRanges) {
-          urls.add(String.format(GLYPHS_TEMPLATE, fontStack, range, token));
-        }
-      }
-    }
-
-    int totalTiles = urls.size();
-    Log.d(
-        TAG,
-        "Starting download for region "
-            + regionId
-            + ": "
-            + totalTiles
-            + " resources "
-            + "(tiles="
-            + tileCoords.size()
-            + " coords x "
-            + layers.size()
-            + " layers + resources), "
-            + "zoom "
-            + minZoom
-            + "-"
-            + maxZoom);
-
-    AtomicBoolean cancelFlag = new AtomicBoolean(false);
-    cancelFlags.put(regionId, cancelFlag);
-
-    AtomicInteger completed = new AtomicInteger(0);
-    AtomicInteger errors = new AtomicInteger(0);
-
-    // Submit download tasks
-    for (String url : urls) {
-      executor.submit(
-          () -> {
-            if (cancelFlag.get()) return;
-
-            try {
-              // Skip if already cached
-              if (!cacheManager.has(url)) {
-                byte[] data = fetchTile(url);
-                if (data != null && !cancelFlag.get()) {
-                  cacheManager.put(url, data);
-                }
-              }
-            } catch (IOException e) {
-              errors.incrementAndGet();
-              Log.w(TAG, "Failed to download: " + url, e);
-            }
-
-            int done = completed.incrementAndGet();
-            if (listener != null && !cancelFlag.get()) {
-              float pct = (float) done / totalTiles * 100f;
-              listener.onProgress(regionId, done, totalTiles, pct);
-
-              if (done >= totalTiles) {
-                cancelFlags.remove(regionId);
-                listener.onComplete(regionId, totalTiles, false);
-              }
-            }
-          });
-    }
+    downloadRegion(
+        new DownloadRequest(regionId, bbox, minZoom, maxZoom, layers, styleName, token), listener);
   }
 
   /** Cancel an in-progress download. */
@@ -233,7 +152,10 @@ public class TileDownloadManager {
   public static int estimateTileCount(double[] bbox, int minZoom, int maxZoom, int layerCount) {
     if (bbox == null || bbox.length != 4) return 0;
 
-    double west = bbox[0], south = bbox[1], east = bbox[2], north = bbox[3];
+    double west = bbox[0];
+    double south = bbox[1];
+    double east = bbox[2];
+    double north = bbox[3];
     int total = 0;
 
     for (int z = minZoom; z <= maxZoom; z++) {
@@ -249,6 +171,133 @@ public class TileDownloadManager {
     return total * layerCount;
   }
 
+  // --- Private helpers ---
+
+  /** Build the complete list of URLs to download (tiles + style resources). */
+  private List<String> buildAllUrls(DownloadRequest request) {
+    double west = request.bbox[0];
+    double south = request.bbox[1];
+    double east = request.bbox[2];
+    double north = request.bbox[3];
+
+    List<TileCoord> tileCoords = calculateTileCoords(west, south, east, north, request.minZoom, request.maxZoom);
+    List<String> urls = buildTileUrls(tileCoords, request.layers, request.token);
+    urls.addAll(buildResourceUrls(request.styleName, request.token));
+    return urls;
+  }
+
+  /** Calculate all tile coordinates for the given bounds and zoom range. */
+  private static List<TileCoord> calculateTileCoords(
+      double west, double south, double east, double north, int minZoom, int maxZoom) {
+    List<TileCoord> coords = new ArrayList<>();
+    for (int z = minZoom; z <= maxZoom; z++) {
+      int minX = lonToTileX(west, z);
+      int maxX = lonToTileX(east, z);
+      int minY = latToTileY(north, z);
+      int maxY = latToTileY(south, z);
+
+      for (int x = minX; x <= maxX; x++) {
+        for (int y = minY; y <= maxY; y++) {
+          coords.add(new TileCoord(z, x, y));
+        }
+      }
+    }
+    return coords;
+  }
+
+  /** Build tile URLs for all coordinates and layers. */
+  private static List<String> buildTileUrls(
+      List<TileCoord> tileCoords, List<TileLayer> layers, String token) {
+    List<String> urls = new ArrayList<>();
+    for (TileCoord coord : tileCoords) {
+      for (TileLayer layer : layers) {
+        urls.add(tileUrlForLayer(layer, coord, token));
+      }
+    }
+    return urls;
+  }
+
+  /** Get the URL template for a specific tile layer. */
+  private static String tileUrlForLayer(TileLayer layer, TileCoord coord, String token) {
+    switch (layer) {
+      case VECTOR:
+        return String.format(VECTOR_TEMPLATE, coord.z, coord.x, coord.y, token);
+      case SATELLITE:
+        return String.format(SATELLITE_TEMPLATE, coord.z, coord.x, coord.y, token);
+      case TERRAIN:
+        return String.format(TERRAIN_TEMPLATE, coord.z, coord.x, coord.y, token);
+      default:
+        return String.format(VECTOR_TEMPLATE, coord.z, coord.x, coord.y, token);
+    }
+  }
+
+  /** Build style, sprite, and glyph resource URLs. */
+  private static List<String> buildResourceUrls(String styleName, String token) {
+    List<String> urls = new ArrayList<>();
+    if (styleName == null || styleName.isEmpty()) {
+      return urls;
+    }
+
+    urls.add(String.format(STYLE_TEMPLATE, styleName, token));
+    urls.add(String.format(SPRITE_JSON_TEMPLATE, styleName, token));
+    urls.add(String.format(SPRITE_PNG_TEMPLATE, styleName, token));
+
+    // Common glyph ranges for typical Latin + Arabic text
+    String[] fontStacks = {
+      "DIN Pro Regular,Arial Unicode MS Regular",
+      "DIN Pro Medium,Arial Unicode MS Regular",
+      "DIN Pro Bold,Arial Unicode MS Bold"
+    };
+    String[] glyphRanges = {
+      "0-255", "256-511", "512-767", "768-1023",
+      "8192-8447", "8448-8703", "65024-65279"
+    };
+    for (String fontStack : fontStacks) {
+      for (String range : glyphRanges) {
+        urls.add(String.format(GLYPHS_TEMPLATE, fontStack, range, token));
+      }
+    }
+    return urls;
+  }
+
+  /** Submit all download tasks to the executor and track progress. */
+  private void submitDownloadTasks(
+      String regionId, List<String> urls, int totalTiles, DownloadListener listener) {
+    AtomicBoolean cancelFlag = new AtomicBoolean(false);
+    cancelFlags.put(regionId, cancelFlag);
+
+    AtomicInteger completed = new AtomicInteger(0);
+
+    for (String url : urls) {
+      executor.submit(
+          () -> {
+            if (cancelFlag.get()) return;
+
+            try {
+              if (!cacheManager.has(url)) {
+                byte[] data = fetchTile(url);
+                if (data.length > 0 && !cancelFlag.get()) {
+                  cacheManager.put(url, data);
+                }
+              }
+            } catch (IOException e) {
+              Log.w(TAG, "Failed to download: " + url, e);
+            }
+
+            int done = completed.incrementAndGet();
+            if (listener != null && !cancelFlag.get()) {
+              float pct = (float) done / totalTiles * 100f;
+              listener.onProgress(regionId, done, totalTiles, pct);
+
+              if (done >= totalTiles) {
+                cancelFlags.remove(regionId);
+                listener.onComplete(regionId, totalTiles, false);
+              }
+            }
+          });
+    }
+  }
+
   // --- Slippy map tile coordinate math ---
 
   /**
@@ -258,7 +307,6 @@ public class TileDownloadManager {
   static int lonToTileX(double lon, int zoom) {
     int n = 1 << zoom; // 2^z
     int x = (int) Math.floor((lon + 180.0) / 360.0 * n);
-    // Clamp to valid range
     return Math.max(0, Math.min(n - 1, x));
   }
 
@@ -273,14 +321,13 @@ public class TileDownloadManager {
         (int)
             Math.floor(
                 (1.0 - Math.log(Math.tan(latRad) + 1.0 / Math.cos(latRad)) / Math.PI) / 2.0 * n);
-    // Clamp to valid range
     return Math.max(0, Math.min(n - 1, y));
   }
 
-  /** Fetch a tile from the network. */
+  /** Fetch a tile from the network. Returns empty array on non-200 response. */
   private byte[] fetchTile(String urlString) throws IOException {
-    URL url = new URL(urlString);
-    HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+    HttpURLConnection connection =
+        (HttpURLConnection) URI.create(urlString).toURL().openConnection();
     try {
       connection.setConnectTimeout(CONNECT_TIMEOUT_MS);
       connection.setReadTimeout(READ_TIMEOUT_MS);
@@ -290,17 +337,18 @@ public class TileDownloadManager {
       int responseCode = connection.getResponseCode();
       if (responseCode != 200) {
         Log.w(TAG, "HTTP " + responseCode + " for: " + urlString);
-        return null;
+        return new byte[0];
       }
 
-      InputStream inputStream = connection.getInputStream();
-      ByteArrayOutputStream baos = new ByteArrayOutputStream();
-      byte[] buffer = new byte[8192];
-      int bytesRead;
-      while ((bytesRead = inputStream.read(buffer)) != -1) {
-        baos.write(buffer, 0, bytesRead);
+      try (InputStream inputStream = connection.getInputStream();
+          ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
+        byte[] buffer = new byte[8192];
+        int bytesRead;
+        while ((bytesRead = inputStream.read(buffer)) != -1) {
+          baos.write(buffer, 0, bytesRead);
+        }
+        return baos.toByteArray();
       }
-      return baos.toByteArray();
     } finally {
       connection.disconnect();
     }
@@ -308,7 +356,9 @@ public class TileDownloadManager {
 
   /** Internal tile coordinate holder. */
   private static class TileCoord {
-    final int z, x, y;
+    final int z;
+    final int x;
+    final int y;
 
     TileCoord(int z, int x, int y) {
       this.z = z;
